Use media queries to adjust size of results view header to prevent excessive wrapping on small screens

--- a/src/pages/resultsView/querySummary/shareUI.module.scss
+++ b/src/pages/resultsView/querySummary/shareUI.module.scss
@@ -1,6 +1,7 @@
 .shareModule {
 
   margin-left:$standardMargin;
+  display:flex;
 
   a {
     span {
